--- a/src/components/main/slider/imageslider/slide.css
+++ b/src/components/main/slider/imageslider/slide.css
@@ -26,7 +26,7 @@
     width: 100%;
     height: 550px;
     top: 173px;
-    z-index: 10;
+    z-index: 1;
   }
   .opacity h1{
     color: white;
@@ -50,4 +50,17 @@
     background-color: rgba(0, 0, 0, 0.8) !important;
     color: white !important;
     
+  }
+  .nav{
+    z-index: 0;
+  }
+  .default-nav {
+    z-index: 0;
+  }
+  svg{
+    z-index: 0;
+  }
+
+  .react-slideshow-container .default-nav:last-of-type {
+    z-index: 0;
   }
