--- a/src/components/side/shoppingcart/Shoppingcart.css
+++ b/src/components/side/shoppingcart/Shoppingcart.css
@@ -7,13 +7,12 @@
     height: 100%;
     display: block;
     background-color: gray;
-    z-index: 25;
-    transition: all 0.5 ease-in-out;
+    z-index: 3;
+    /* transition: all 2s ease-in-out; */
     border-radius: 1px;
     border: 1px dashed black;
-    /* transform: translateX(-150px); */
-    /* transition: transform 0.3s ease-in-out 0s; */
-
+   transition: left 1s ease-in-out;
+   left: -280px;
 }
 
 
@@ -21,7 +20,7 @@
 .closeshoppingcart{
     float: right;
     position: relative;
-    z-index: 3;
+    z-index: 30;
     font-size: 16px;
     color: whitesmoke;
     margin-top: -25px;
