--- a/src/components/main/category/Category.css
+++ b/src/components/main/category/Category.css
@@ -29,3 +29,18 @@ border: 1px solid black;
   color: black;
   text-decoration: none;
 }
+
+@media (max-width:770px){
+  .row{
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center;
+
+  }
+  .anchor{
+    display: flex !important;
+    flex-direction: column !important;
+    margin-left: 0px;
+    margin-bottom: -34px;
+  }
+}
