--- a/src/components/side/shoppingcart/Shoppingcart.css
+++ b/src/components/side/shoppingcart/Shoppingcart.css
@@ -2,23 +2,20 @@
     position: fixed;
     overflow-y: auto;
     top: 0px;
-    left: 0px;
+    left: -280px;
     width: 280px;
     padding: 25px 15px;
     height: 100%;
-    display: none;
     background-color: gray;
     z-index: 3;
     /* transition: all 2s ease-in-out; */
     border-radius: 1px;
     border: 1px dashed black;
    transition: all 0.5s ease-in-out;
-    transform: translateX(0px);
 
 }
-.open{
-    transform: translateX(0px);
-    display: block;
+.side.open{
+    left: 0;
 }
 
 
