--- a/src/components/Backdrop/Backdrop.css
+++ b/src/components/Backdrop/Backdrop.css
@@ -1,12 +1,15 @@
 .background {
-    filter: blur(4px);
+    filter: blur(0px);
     position: fixed;
     width: 100%;
     height: 100%;
-    background-color: rgba(27, 25, 25,0.8);
+    background-color: rgba(27, 25, 25,0.88);
     z-index: 5;
-    transition: all 0.5 ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
+  
 
   .close-drop{
     color: red;
@@ -25,7 +28,12 @@
   }
 
 .tools-drop{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
   width: 250px;
+  margin-top: -170px;
   height: 100px;
   z-index: 6;
     position: fixed;
@@ -42,3 +50,191 @@
     color: yellowgreen;
     text-decoration: none;
   }
+@media(max-width:1000px){
+.tools-drop{
+  margin-left: -170px;
+
+}
+.close-drop{
+  margin-left: -150px;
+}
+}
+
+@media(max-width:770px){
+  .tools-drop{
+    margin-left: -280px;
+  
+  }
+  .close-drop{
+    margin-left: -255px;
+  }
+  
+}
+
+
+@media(max-width:570px){
+  .tools-drop{
+    margin-left: -380px;
+  
+  }
+  .close-drop{
+    margin-left: -355px;
+  }
+  
+}
+
+
+@media(max-width:420px){
+  .tools-drop{
+    margin-left: -440px;
+  
+  }
+  .close-drop{
+    margin-left: -420px;
+  }
+  
+}
+
+
+
+/* contact back drop styles */
+
+.background
+input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid ~ label {
+  font-size: 0.75em;
+  color: #999;
+  top: -5px;
+  -webkit-transition: all 0.225s ease;
+  transition: all 0.225s ease;
+}
+
+.styled-input {
+  
+  float: left;
+  width: 293px;
+  margin: 1rem 0;
+  position: relative;
+  border-radius: 4px;
+}
+
+@media only screen and (max-width: 768px){
+  .styled-input {
+      width:100%;
+  }
+}
+
+.styled-input label {
+  color: #999;
+  padding: 1.3rem 30px 1rem 30px;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+  pointer-events: none;
+}
+
+.styled-input.wide { 
+  width: 650px;
+  max-width: 100%;
+}
+.background
+input,
+textarea {
+  padding: 30px;
+  border: 0;
+  width: 100%;
+  font-size: 1rem;
+  background-color: #2d2d2d;
+  color: white;
+  border-radius: 4px;
+}
+.background
+input:focus,
+textarea:focus { outline: 0; }
+.background
+input:focus ~ span,
+textarea:focus ~ span {
+  width: 100%;
+  -webkit-transition: all 0.075s ease;
+  transition: all 0.075s ease;
+}
+
+.background textarea {
+  width: 100%;
+  min-height: 15em;
+}
+
+.input-container {
+  width: 650px;
+  /* max-width: 100%; */
+  margin-left: 230px !important;
+}
+
+.submit-btn {
+  float: right !important;
+  margin: auto !important;
+  padding: 7px 35px;
+  border-radius: 60px;
+  display: block;
+  /* display: inline-block; */
+  background-color: #4b8cfb;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.06),
+            0 2px 10px 0 rgba(0,0,0,0.07);
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+}
+
+.submit-btn:hover {
+  transform: translateY(1px);
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.10),
+            0 1px 1px 0 rgba(0,0,0,0.09);
+}
+.styled-input label{
+  color: white;
+  direction: rtl !important;
+  float: right !important;
+}
+
+@media (max-width: 768px) {
+  .submit-btn {
+      width:100%;
+      float: none;
+      text-align:center;
+  }
+}
+
+.background input[type=checkbox] + label {
+color: #ccc;
+font-style: italic;
+} 
+
+.background input[type=checkbox]:checked + label {
+color: #f00;
+font-style: normal;
+}
+
+
+.background input{
+  background-color: rgba(80, 210, 214, 0.9) !important;
+
+}
+.background textarea{
+  background-color: rgba(45, 227, 233, 0.9) !important;
+
+}
+
+.close_drop_contact{
+  color: red;
+    width: 25px;
+    height: 25px;
+    font-weight: 900;
+    font-size: 55px;
+    z-index: 6;
+    left: 11em;
+    float: right;
+    cursor: pointer;
+}
