--- a/src/components/main/slider/imageslider/slide.css
+++ b/src/components/main/slider/imageslider/slide.css
@@ -49,7 +49,9 @@
   .product{
     background-color: rgba(0, 0, 0, 0.8) !important;
     color: white !important;
-    
+  }
+  .product:hover{
+    background-color: rgb(219, 94, 94) !important;
   }
   .nav{
     z-index: 0;
@@ -63,4 +65,12 @@
 
   .react-slideshow-container .default-nav:last-of-type {
     z-index: 0;
+  }
+  @media(max-width:700px){
+    .opacity p{
+      font-size: 20px;
+    }
+    .opacity h1{
+      font-size: 30px;
+    }
   }
