--- a/src/components/navigation/Navbar/header.css
+++ b/src/components/navigation/Navbar/header.css
@@ -22,15 +22,17 @@ body {
     background-color: white;
     z-index: 2;
 }
+.main-header
 .navbar{
     outline: none;
 }
-
+.main-header
 .nav-container {
     width: 100%;
     height: 125px;
     background-color: white;
 }
+
 .navbar {
     display: grid;
     grid-template-columns: 0.2fr auto 1fr;
@@ -143,5 +145,77 @@ body {
     }
     .nav-links-btn:hover {
         background-color: var(--brightred);
+    }
+}
+.togglemenu , .toggle-nav{
+    display: none;
+}
+
+@media(max-width:770px){
+    .nav-menu{
+        display: none;
+    }
+    .togglemenu{
+        display: flex;
+        flex-direction: column;
+        width: 40px;
+        line-height: 8px;
+        cursor: pointer;
+    }
+    .togglemenu .three-line::after{
+        color: #111;
+        font-size: 30px;
+        content: '__\ __ \ __';
+        font-weight: 700;
+    }
+    .togglemenu.active .three-line::after{
+        color: #111;
+        font-size: 35px;
+        font-weight: 700;
+        content: 'X';
+    }
+    
+
+    .toggle-nav{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;
+        transition: all 0.5s ease-in-out;
+        height: 0px;
+        background-color: white;
+        
+    }
+    .toggle-nav.active{
+        height: 300px;
+    }
+    .toggle-nav ul li{
+        list-style: none;
+        font-size: 25px;
+        text-align: center;
+    }
+    .toggle-nav .nav-linksian{
+        text-decoration: none;
+        color: #111;
+    }
+    .toggle-nav ul li  .nav-linksian:hover{
+        color: tomato;
+        transition: all 0.5s ease;
+    }
+    .toggle-nav button{
+        /* background-color: #fff; */
+        height: 10px;
+    }
+    .toggle-nav button:hover{
+        /* transform: translate(1px,1px); */
+        transition: all 0.5s ease;
+        color: green;
+    }
+    .navbar .logo{
+        margin-top: -13px;
+    }
+    .nav-container{
+        height:110px ;
     }
 }
